--- a/src/Draconware.Result.csproj
+++ b/src/Draconware.Result.csproj
@@ -16,11 +16,16 @@
 	<Copyright>Copyright (c) 2024 draconware-dev</Copyright>
 	 <PackageTags>Result;Performance;Functional;Light-weight</PackageTags>
 	<PackageReleaseNotes>Version 1.0.0</PackageReleaseNotes>
-	<PackageLicenseFile>../LICENSE</PackageLicenseFile>
+	<PackageLicenseFile>LICENSE</PackageLicenseFile>
 	<Version>1.0.0</Version>
 	<PackageId>Draconware.Result</PackageId>
-	<PackageReadmeFile>../README.md</PackageReadmeFile>
-	<PackageIcon>../icon.png</PackageIcon>
+	<PackageReadmeFile>README.md</PackageReadmeFile>
+	<PackageIcon>icon.png</PackageIcon>
   </PropertyGroup>
 
+	<ItemGroup>
+		<None Include="../LICENSE" Pack="true" PackagePath=""></None>
+		<None Include="../icon.png" Pack="true" PackagePath=""></None>
+		<None Include="../README.md" Pack="true" PackagePath=""></None>
+	</ItemGroup>
 </Project>
